examples/test/testpolicy6176.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6176
  namespace: namespace427
spec:
  podSelector:
    matchLabels:
      key24: value34
      key9: value0
      key35: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value39
      podSelector:
        matchLabels:
          key12: value47
          key33: value0
          key20: value30
